test/Fail/Issue2408-error.err
Issue2408-error.agda:11.18-27: error: [UnequalTypes]
The types
  Set (lsuc (l a))
and
  Set₁
are not equal
when checking that the expression Set (l a) has type Set₁
